# public_codes

Hackerrank/3_month_preparation/python/: mock_tests.py  week1.py  week2.py  week3.py  week4.py  week5.py
Python/: aum_gestoras.py  biggest_shareholder_in_funds.py  dados_semanais.py  parquets_from_excel_backups.py  performance_attribuition_create.py
Python/allocations/: allocations.py  fills_bbg_excel.py  fills_solutions.py  trades_btc.py  update_weights.py
Python/libraries installer/: libraries_installer.bat  libraries_installer.py
Python/modules/: copy_file.py  day_handler.py  portfolio_position.py  send_email.py  warning_message.py  workbook_functions.py
Rust/The_rust_book/Ch_04_ownership/: Cargo.toml
Rust/The_rust_book/Ch_05_Structs/: Cargo.toml
Rust/The_rust_book/Ch_12_minigrep/: Cargo.toml
Rust/axum_tests/: Cargo.toml
Rust/axum_tests/src/: errors.rs  main.rs
Rust/axum_tests/src/web/: routes_login.rs
Rust/chat_box/: Cargo.toml  README.md
Rust/chat_box/src/: lib.rs  main.rs
Rust/chat_box/style/: main.scss
Rust/concurrency/link_checker/: Cargo.toml
Rust/errors_crates/: Cargo.toml
Rust/errors_crates/src/: color_eyre_mod.rs  error_set_mod.rs  eyre_mod.rs  main.rs  miette_mod.rs  read_func.rs  simple_miette.rs  span_tracer.rs
Rust/gui/: Cargo.toml
Rust/gui/src/: checkbox.rs  (+19 more)
Rust/read_file_send_input/: Cargo.toml
Rust/simple_benchmark/: Cargo.toml
The_book_rust/Ch_06_enums/: Cargo.toml
The_book_rust/Ch_09_error_handling/: Cargo.toml
The_book_rust/Ch_11_automated_tests/: Cargo.toml
The_book_rust/ch_20_web_server/: Cargo.toml
(+50 files in other folders)
