[package]
name = "axum_course"
version = "0.1.0"
edition = "2021"
default-run = "axum_course"

[dependencies]
axum = "0.8.0-alpha.1"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
httpc-test = "0.1.10"
tower-cookies = "0.10.0"
color-eyre = "0.6.3"
